--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     </head>
-    <body></body>
+    <body>
+        <!-- Header -->
+        <header class="header-fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <a href="#!">
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="Lesson."
+                            class="logo"
+                        />
+                    </a>
+                    <!-- navbar -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active">
+                                <a href="#!">Home</a>
+                            </li>
+                            <li><a href="#!">Courses</a></li>
+                            <li><a href="#!">Pricing</a></li>
+                            <li><a href="#!">Reviews</a></li>
+                        </ul>
+                    </nav>
+                    <!-- cta -->
+                    <div class="action">
+                        <a href="#!" class="btn sign-up-btn">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </body>
 </html>
