--- a/index.html
+++ b/index.html
@@ -40,91 +40,159 @@
             </div>
         </header>
 
-        <!-- Hero -->
-        <div class="hero">
-            <div class="main-content">
-                <div class="body">
-                    <div class="media-block">
-                        <img
-                            src="./assets/img/hero.svg"
-                            alt="Learn without limits and spread knowledge."
-                            class="hero-img"
-                        />
-                        <div class="media-card">
-                            <div class="card-item">
-                                <div class="icon" style="background: #fff9e8">
-                                    <img
-                                        src="./assets/img/orion-page.svg"
-                                        alt="orion page"
-                                    />
+        <main>
+            <!-- Hero -->
+            <div class="hero">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="media-block">
+                            <img
+                                src="./assets/img/hero.svg"
+                                alt="Learn without limits and spread knowledge."
+                                class="hero-img"
+                            />
+                            <div class="media-card">
+                                <div class="card-item">
+                                    <div
+                                        class="icon"
+                                        style="background: #fff9e8"
+                                    >
+                                        <img
+                                            src="./assets/img/orion-page.svg"
+                                            alt="orion page"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="content">20 Courses</p>
+                                        <strong class="label"
+                                            >UI/UX Design</strong
+                                        >
+                                    </div>
                                 </div>
-                                <div class="info">
-                                    <p class="content">20 Courses</p>
-                                    <strong class="label">UI/UX Design</strong>
+                                <div class="card-item">
+                                    <div
+                                        class="icon"
+                                        style="background: #fcefff"
+                                    >
+                                        <img
+                                            src="./assets/img/orion-code-window.svg"
+                                            alt="orion code window"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="content">20 Courses</p>
+                                        <strong class="label"
+                                            >Development</strong
+                                        >
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="card-item">
-                                <div class="icon" style="background: #fcefff">
-                                    <img
-                                        src="./assets/img/orion-code-window.svg"
-                                        alt="orion code window"
-                                    />
-                                </div>
-                                <div class="info">
-                                    <p class="content">20 Courses</p>
-                                    <strong class="label">Development</strong>
-                                </div>
-                            </div>
-                            <div class="card-item">
-                                <div class="icon" style="background: #ebeaff">
-                                    <img
-                                        src="./assets/img/orion-megaphone.svg"
-                                        alt="orion megaphone"
-                                    />
-                                </div>
-                                <div class="info">
-                                    <p class="content">30 Courses</p>
-                                    <strong class="label">Marketing</strong>
+                                <div class="card-item">
+                                    <div
+                                        class="icon"
+                                        style="background: #ebeaff"
+                                    >
+                                        <img
+                                            src="./assets/img/orion-megaphone.svg"
+                                            alt="orion megaphone"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="content">30 Courses</p>
+                                        <strong class="label">Marketing</strong>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="content-block">
-                        <h1 class="title line-clamp" style="--line-clamp: 4">
-                            Learn without limits and spread knowledge.
-                        </h1>
-                        <p class="desc line-clamp" style="--line-clamp: 4">
-                            Build new skills for that “this is my year” feeling
-                            with courses, certificates, and degrees from
-                            world-class universities and companies.
-                        </p>
-                        <div class="cta-group">
-                            <a href="#!" class="btn hero-cta">See Course</a>
-                            <a href="#!" class="watch-video">
-                                <div class="icon">
-                                    <img
-                                        src="./assets/img/play-video.svg"
-                                        alt="watch video"
-                                    />
-                                </div>
-
-                                <span>Watch Video</span>
-                            </a>
-                        </div>
-
-                        <p class="desc">Recent engagement</p>
-
-                        <div class="stats">
-                            <p class="stats-info">
-                                <strong>50K </strong>Students
+                        <div class="content-block">
+                            <h1
+                                class="title line-clamp"
+                                style="--line-clamp: 4"
+                            >
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc line-clamp" style="--line-clamp: 4">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
                             </p>
-                            <p class="stats-info">
-                                <strong>70+ </strong>Courses
-                            </p>
+                            <div class="cta-group">
+                                <a href="#!" class="btn hero-cta">See Course</a>
+                                <a href="#!" class="watch-video">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/play-video.svg"
+                                            alt="watch video"
+                                        />
+                                    </div>
+
+                                    <span>Watch Video</span>
+                                </a>
+                            </div>
+
+                            <p class="desc">Recent engagement</p>
+
+                            <div class="stats">
+                                <p class="stats-info">
+                                    <strong>50K </strong>Students
+                                </p>
+                                <p class="stats-info">
+                                    <strong>70+ </strong>Courses
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+
+            <!-- Popular course -->
+            <div class="popular-course">
+                <div class="main-content">
+                    <div class="popular-top">
+                        <div class="info">
+                            <h2 class="title">Our popular courses</h2>
+                            <p class="desc">
+                                Build new skills with new trendy courses and
+                                shine for the next future career.
+                            </p>
+                        </div>
+                        <div class="control">
+                            <button class="btn-control">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M7 1L1 7L7 13"
+                                        stroke="#FFB900"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                            <button class="btn-control">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M1 1L7 7L1 13"
+                                        stroke="#FFB900"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="course-list"></div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
