--- a/index.html
+++ b/index.html
@@ -190,7 +190,123 @@
                             </button>
                         </div>
                     </div>
-                    <div class="course-list"></div>
+                    <div class="course-list">
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-1.png"
+                                    alt="Basic web design"
+                                    class="img-course"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="top-row">
+                                    <h3>
+                                        <a
+                                            class="course-name line-clamp"
+                                            style="--line-clamp: 2"
+                                            href="#!"
+                                            >Basic web design</a
+                                        >
+                                    </h3>
+                                    <div class="evaluate">
+                                        <img
+                                            src="./assets/img/star.svg"
+                                            alt="evaluate"
+                                        />
+                                        <span>4.5</span>
+                                    </div>
+                                </div>
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom-row">
+                                    <span class="price">$120.75</span>
+                                    <a href="#!" class="btn btn-book"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-2.png"
+                                    alt="UI/UX design"
+                                    class="img-course"
+                                />
+                            </a>
+
+                            <div class="info">
+                                <div class="top-row">
+                                    <h3>
+                                        <a
+                                            class="course-name line-clamp"
+                                            style="--line-clamp: 2"
+                                            href="#!"
+                                            >UI/UX design</a
+                                        >
+                                    </h3>
+                                    <div class="evaluate">
+                                        <img
+                                            src="./assets/img/star.svg"
+                                            alt="evaluate"
+                                        />
+                                        <span>4.5</span>
+                                    </div>
+                                </div>
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom-row">
+                                    <span class="price">$120.75</span>
+                                    <a href="#!" class="btn btn-book"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-1.png"
+                                    alt="Web App design"
+                                    class="img-course"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="top-row">
+                                    <h3>
+                                        <a
+                                            class="course-name line-clamp"
+                                            style="--line-clamp: 2"
+                                            href="#!"
+                                            >Web App design</a
+                                        >
+                                    </h3>
+                                    <div class="evaluate">
+                                        <img
+                                            src="./assets/img/star.svg"
+                                            alt="evaluate"
+                                        />
+                                        <span>4.5</span>
+                                    </div>
+                                </div>
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom-row">
+                                    <span class="price">$120.75</span>
+                                    <a href="#!" class="btn btn-book"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
