--- a/index.html
+++ b/index.html
@@ -309,6 +309,41 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Feedback -->
+            <div class="feedback">
+                <div class="main-content">
+                    <div class="feedback-content">
+                        <div class="student-info">
+                            <img
+                                src="./assets/img/avatar-1.jpg"
+                                alt="Peter Moor"
+                                class="avatar"
+                            />
+                            <p class="student-name">Peter Moor</p>
+                            <p class="class-name">Student of Web Design</p>
+                        </div>
+                        <div class="feedback-detail">
+                            <img
+                                src="./assets/img/quotation.svg"
+                                alt="feedback"
+                            />
+                            <p class="desc line-clamp" style="--line-clamp: 5">
+                                Not only does my resume look impressive—filled
+                                with the names and logos of world-class
+                                institutions—but these certificates also bring
+                                me closer to my career goals by validating the
+                                skills I've learned."
+                            </p>
+                        </div>
+                    </div>
+                    <div class="pagination">
+                        <span class="pagination-item"></span>
+                        <span class="pagination-item active"></span>
+                        <span class="pagination-item"></span>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
