--- a/index.html
+++ b/index.html
@@ -344,6 +344,65 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Features -->
+            <div class="features">
+                <div class="main-content">
+                    <div class="feature-top">
+                        <div class="feature-img">
+                            <img
+                                src="./assets/img/feature-1.png"
+                                alt="Learner outcomes through our awesome platform"
+                            />
+                            <img
+                                src="./assets/img/feature-2.png"
+                                alt="Learner outcomes through our awesome platform"
+                            />
+                        </div>
+                        <div class="feature-info">
+                            <h2
+                                class="title line-clamp"
+                                style="--line-clamp: 2"
+                            >
+                                Learner outcomes through our awesome platform
+                            </h2>
+                            <p class="desc line-clamp" style="--line-clamp: 4">
+                                87% of people learning for professional
+                                development report career benefits like getting
+                                a promotion, a raise, or starting a new career.
+                            </p>
+                            <p class="desc line-clamp" style="--line-clamp: 2">
+                                Lesson Impact Report (2022)
+                            </p>
+
+                            <a href="#!" class="btn btn-cta">Sign Up</a>
+                        </div>
+                    </div>
+                    <div class="feature-bottom">
+                        <div class="feature-info">
+                            <h2
+                                class="title line-clamp"
+                                style="--line-clamp: 4"
+                            >
+                                Take the next step toward your personal and
+                                professional goals with Lesson.
+                            </h2>
+                            <p class="desc line-clamp" style="--line-clamp: 4">
+                                Take the next step toward. Join now to receive
+                                personalized and more recommendations from the
+                                full Coursera catalog.
+                            </p>
+                            <a href="#!" class="btn btn-cta">Join Now</a>
+                        </div>
+                        <div class="feature-img">
+                            <img
+                                src="./assets/img/feature-1.png"
+                                alt="Take the next step toward your personal and professional goals with Lesson."
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
