--- a/index.html
+++ b/index.html
@@ -403,6 +403,81 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Blogs -->
+            <div class="blogs">
+                <div class="main-content">
+                    <h2 class="title">Our blog</h2>
+                    <p class="desc">
+                        Read our regular travel blog and know the latest update
+                        of tour and travel
+                    </p>
+                    <div class="blogs-list">
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.png"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="img-blog"
+                                />
+                            </a>
+                            <div class="blog-info">
+                                <p class="date">21 November 2021</p>
+                                <div class="divider"></div>
+                                <h3 class="blog-title">
+                                    How to become a pro web designer in 2022 and
+                                    get remot job?
+                                </h3>
+                                <a href="#!" class="btn btn-read">Read More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.png"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="img-blog"
+                                />
+                            </a>
+                            <div class="blog-info">
+                                <p class="date">21 November 2021</p>
+                                <div class="divider"></div>
+                                <h3 class="blog-title">
+                                    How to become a pro web designer in 2022 and
+                                    get remot job?
+                                </h3>
+                                <a href="#!" class="btn btn-read">Read More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.png"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="img-blog"
+                                />
+                            </a>
+                            <div class="blog-info">
+                                <p class="date">21 November 2021</p>
+                                <div class="divider"></div>
+                                <h3
+                                    class="blog-title line-clamp"
+                                    style="--line-clamp: 3"
+                                >
+                                    How to become a pro web designer in 2022 and
+                                    get remot job?
+                                </h3>
+                                <a href="#!" class="btn btn-read">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="paginate">
+                        <div class="paginate-item"></div>
+                        <div class="paginate-item active"></div>
+                        <div class="paginate-item"></div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
