feat: make footer

--- a/index.html
+++ b/index.html
@@ -479,5 +479,98 @@
                 </div>
             </div>
         </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="main-content">
+                <div class="body">
+                    <div class="column">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/logo-white.svg"
+                                alt="Lesson."
+                            />
+                        </a>
+                        <p class="slogan">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="social-media">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/twitter.svg"
+                                    alt="twitter"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/facebook.svg"
+                                    alt="facebook"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/linked_in.svg"
+                                    alt="linked in"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/instagram.svg"
+                                    alt="instagram"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <div class="divider"></div>
+                        <ul class="list">
+                            <li><a href="#!">About Us</a></li>
+                            <li><a href="#!">Features</a></li>
+                            <li><a href="#!">Our Pricing</a></li>
+                            <li><a href="#!">Latest News</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Support</h3>
+                        <div class="divider"></div>
+                        <ul class="list">
+                            <li><a href="#!">FAQ’s</a></li>
+                            <li><a href="#!">Terms & Conditions</a></li>
+                            <li><a href="#!">Privacy Policy</a></li>
+                            <li><a href="#!">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Address</h3>
+                        <div class="divider"></div>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">
+                                    <strong>Location: </strong>27 Division St,
+                                    New York, NY 10002, USA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:email@gmail.com"
+                                    ><strong>Email: </strong>email@gmail.com</a
+                                >
+                            </li>
+                            <li>
+                                <a href="tel:0001234567890"
+                                    ><strong>Phone: </strong>+ 000 1234 567
+                                    890</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <p class="copyright">
+                    Copyright ©2022 webdesign.gdn All rights reserved
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
